samples/_failures_safe/1761411951_70757c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5a469a49.c: In function ‘main’:
./samples/SAFE/__tmp_5a469a49.c:130:5: error: expected declaration or statement at end of input
  130 |     for (int i = 0; i < entry_count; i++) {
      |     ^~~
./samples/SAFE/__tmp_5a469a49.c:130:5: error: expected declaration or statement at end of input
